2006-06-05 Quentin Mathe <qmathe@club-internet.fr>

	Fixed the repository compilation broken since XWindowServerKit 
	dependency was introduced.
	* GNUmakefile.preamble:
	* GNUmakefile.postamble:
	Added.
	* GNUmafile: Updated to include the two new files.

2006-05-27 Yen-Ju Chen <yjchenx at gmail>

	* Link to XWindowServerKit.
	* Post XCurrentWorkspaceDidChangeNotification.

2006-05-03 Yen-Ju Chen <yjchenx at gmail>

	* AZClient.m: fix borderless.

2006-05-03 Yen-Ju Chen <yjchenx at gmail>

	* Work on GNUstep/MaxOSX

2006-04-26 Yen-Ju Chen <yjchenx at gmail>

	* Set _NET_FRAME_EXTENTS when client is managed for the first time.

2006-04-24 Alex Perez <aperez at alexperez dawt com>
	* Removed unnecessary pkg-config glib include and lib flags
	  in Azalea/render/GNUmakefile which were causing lots of compilation 
	  warnings.

2006-04-23 Yen-Ju Chen <yjchenx at gmail>

	* patched by Cris Vetter for FreeBSD 6.
	* use ADDITIONAL_CPPFLAGS.

2006-04-22 Yen-Ju Chen <yjchenx at gmail>

	* use NSArray for session.
	* remove more glib.
	* fix missing sm_id.
	* Complete remove glib.
	* Make sure it compiles with minimal requirement.
	* Add default rc.xml, menu.xml and theme.
	* Update-to-date.

2006-04-21 Yen-Ju Chen <yjchenx at gmail>

	* Port render/instance.
	* Remove glib from render/
	* Port ObSessionState into AZSessionState.

2006-04-20 Yen-Ju Chen <yjchenx at gmail>

	* Port RrAppearance int AZAppearance (so far so good).
	* Remove glib from render.h to expose hidden usages of glib 
	  in many places.
	* Fix compilation.
	* Update to OpenBox3 CVS.
	* Use fix-size type just in case.
	(never tests on 64-bit machine because I don't have one :).

2006-04-19 Yen-Ju Chen <yjchenx at gmail>

	* Removeo pango from render/font.

2006-04-17 Yen-Ju Chen <yjchenx at gmail>

  	* Remove glib from openbox.m.
  	* Remove glib from AZMainLoop.
  	* Remove glib from AZMenuManager.
	* Revmoe most glib from AZClient.m.
	* Revmoe most glib from parse.
