@@ -124,35 +124,16 @@
 
     /* set the size and position if fullscreen */
     if (fullscreen) {
-#ifdef VIDMODE
-        int dot;
-        XF86VidModeModeLine mode;
-#endif
         Rect *a;
         unsigned int i;
 
         i = [self monitor];
 	a = [[AZScreen defaultScreen] physicalAreaOfMonitor: i];
 
-#ifdef VIDMODE
-        if (i == 0 && /* primary head */
-            extensions_vidmode &&
-            XF86VidModeGetViewPort(ob_display, ob_screen, &x, &y) &&
-            /* get the mode last so the mode.privsize isnt freed incorrectly */
-            XF86VidModeGetModeLine(ob_display, ob_screen, &dot, &mode)) {
-            x += a->x;
-            y += a->y;
-            w = mode.hdisplay;
-            h = mode.vdisplay;
-            if (mode.privsize) XFree(mode.private);
-        } else
-#endif
-        {
-            x = a->x;
-            y = a->y;
-            w = a->width;
-            h = a->height;
-        }
+        x = a->x;
+        y = a->y;
+        w = a->width;
+        h = a->height;
 
         user = NO; /* ignore that increment etc shit when in fullscreen */
     } else {
@@ -3121,12 +3102,6 @@ AZClient *AZUnderPointer()
 	    AZFocusManager *fManager = [AZFocusManager defaultManager];
 	    [fManager focusOrderRemove: self];
 	    [fManager focusOrderAdd: self];
-
-            /* this is here cuz with the VIDMODE extension, the viewport can
-               change while a fullscreen window is iconic, and when it
-               uniconifies, it would be nice if it did so to the new position
-               of the viewport */
-	    [self reconfigure];
 
             changed = YES;
         }
